# messaging-playground

./: .gitignore  Cargo.toml  build.rs  client.ts
data_access/: mod.rs
src/: helpers.rs  lib.rs  shared.rs  sqlite.rs
src/client/: mod.rs
src/protos/: message.proto
src/server/: mod.rs
