[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
arboard = "3.3.0"
rusqlite = "0.30.0"

[build-dependencies]
prost-build = { version = "0.12" }

[lib]
name = "data_access"
path = "data_access/mod.rs"