[package]
name = "messaging_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
arboard = "3.3.0"
rusqlite = "0.30.0"

[build-dependencies]
prost-build = { version = "0.12" }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
path = "src/lib.rs"
